# GinkoPosters

./: .env.example  .gitignore  docker-compose.yml  render.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_order_discount.py  003_add_gallery_urls_to_products.py  004_update_product_details.py  005_purge_and_reinsert_products.py  006_add_laz_lewis.py  007_add_artist_hero_image.py
backend/src/: config.py  database.py  dependencies.py  main.py  pagination.py
backend/src/accounting/: models.py  router.py  schemas.py  service.py
backend/src/artists/: models.py  router.py  schemas.py  service.py
backend/src/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/emails/: service.py
backend/src/fulfillment/: router.py  schemas.py  service.py
backend/src/orders/: models.py  router.py  schemas.py  service.py
backend/src/payments/: router.py  schemas.py  service.py  shipping_config.py
backend/src/products/: models.py  router.py  schemas.py  service.py
backend/src/storage/: router.py  service.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_orders.py  test_smoke.py
database/: init.sql  seed.sql
docs/plans/: 2026-03-04-hosting-supabase-vercel-render.md  2026-03-04-support-and-discount-design.md  2026-03-04-support-and-discount-plan.md
frontend/: .env.local.example  Dockerfile.prod  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  (+1 more)
(+67 files in other folders)
